--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ text-align:center;
   bottom: 0px;
   margin:0 auto; 
 font-family: 'hotsweatregular';
-background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
+/* background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
 -webkit-background-size: 125px;
 
 color: #111111;
@@ -49,7 +49,7 @@ color: #111111;
 
 -webkit-animation-name: color_shine;
 -webkit-animation-duration: 10s;
--webkit-animation-iteration-count: infinite;
+-webkit-animation-iteration-count: infinite; */
 }
 
 #message{
