--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@font-face{
+/* @font-face{
 	font-family:'hotsweatregular';
 	src: url('../fonts/hotsweat-webfont.eot');
     src: url('../fonts/hotsweat-webfont.eot?#iefix') format('embedded-opentype'),
@@ -18,7 +18,7 @@
 		 url('../fonts/brotherhood_script-webfont.svg#brotherhood_scriptregular') format('svg');
     font-weight: normal;
     font-style: normal;
-}
+} */
 
 html, body{
   margin : 0px;
@@ -40,8 +40,8 @@ text-align:center;
   font-size:3em;
   bottom: 0px;
   margin:0 auto; 
-font-family: 'hotsweatregular';
-/* background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
+/* font-family: 'hotsweatregular'; */
+background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
 -webkit-background-size: 125px;
 
 color: #111111;
@@ -49,7 +49,7 @@ color: #111111;
 
 -webkit-animation-name: color_shine;
 -webkit-animation-duration: 10s;
--webkit-animation-iteration-count: infinite; */
+-webkit-animation-iteration-count: infinite;
 }
 
 #message{
@@ -57,7 +57,7 @@ text-align:center;
   font-size:2.5em;
   bottom: 0px;
   margin:0 auto; 
-font-family: 'brotherhood_scriptregular';
+/* font-family: 'brotherhood_scriptregular'; */
 background: -webkit-gradient(linear, left top, right top, from(#FF9900), to(#FF9900), color-stop(0.5, #fff)) 0 0 repeat;
 -webkit-background-size: 125px;
 
