--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,4 @@
-/* @font-face{
-	font-family:'hotsweatregular';
-	src: url('../fonts/hotsweat-webfont.eot');
-    src: url('../fonts/hotsweat-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/hotsweat-webfont.woff') format('woff'),
-		 url('../fonts/hotsweat-webfont.ttf') format('truetype'),
-		 url('../fonts/hotsweat-webfont.svg#hotsweatregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
-@font-face{
-	font-family:'brotherhood_scriptregular';
-	src: url('../fonts/brotherhood_script-webfont.eot');
-    src: url('../fonts/brotherhood_script-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/brotherhood_script-webfont.woff') format('woff'),
-		 url('../fonts/brotherhood_script-webfont.ttf') format('truetype'),
-		 url('../fonts/brotherhood_script-webfont.svg#brotherhood_scriptregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-} */
 
 html, body{
   margin : 0px;
@@ -41,7 +21,7 @@ text-align:center;
   bottom: 0px;
   margin:0 auto; 
 /* font-family: 'hotsweatregular'; */
-background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
+/* background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat; */
 -webkit-background-size: 125px;
 
 color: #111111;
