--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ text-align:center;
   margin:0 auto; 
 color:#fff;
 /* font-family: 'hotsweatregular'; */
-/* background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat; */
+background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
 -webkit-background-size: 125px;
 
 /* color: #111111; */
