--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ text-align:center;
   font-size:3em;
   bottom: 0px;
   margin:0 auto; 
-color:#fff;
+color:red;
 /* font-family: 'hotsweatregular'; */
 background: -webkit-gradient(linear, left top, right top, from(#FF1177), to(#FF1177), color-stop(0.5, #fff)) 0 0 repeat;
 -webkit-background-size: 125px;
